force-app/main/default/objects/Contact/fields/Adresszusatz__c.field-meta.xml
<CustomField>
    <fullName>Adresszusatz__c</fullName>
    <label>Adresszusatz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>