force-app/main/default/objects/Contact/fields/Aktivierungscode__c.field-meta.xml
<CustomField>
    <fullName>Aktivierungscode__c</fullName>
    <label>Aktivierungscode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>