force-app/main/default/objects/Contact/fields/Alterskategorie__c.field-meta.xml
<CustomField>
    <fullName>Alterskategorie__c</fullName>
    <label>Alterskategorie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>