force-app/main/default/objects/Contact/fields/Anrede_Formel__c.field-meta.xml
<CustomField>
    <fullName>Anrede_Formel__c</fullName>
    <formula>CASE(TEXT(Salutation), &quot;Herr&quot;, &quot;Sehr geehrter Herr&quot;, &quot;Frau&quot;, &quot;Sehr geehrte Frau&quot;, &quot;Sehr geehrte/r Herr/Frau&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anrede Formel</label>
    <type>Text</type>
</CustomField>