force-app/main/default/objects/Contact/fields/Ansprechpartner__c.field-meta.xml
<CustomField>
    <fullName>Ansprechpartner__c</fullName>
    <formula>Account.Ansprechpartner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ansprechpartner</label>
    <type>Text</type>
</CustomField>