force-app/main/default/objects/Contact/fields/ArbeitgeberInOrt__c.field-meta.xml
<CustomField>
    <fullName>ArbeitgeberInOrt__c</fullName>
    <label>Arbeitgeber/in Ort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>