force-app/main/default/objects/Contact/fields/ArbeitgeberSeit__c.field-meta.xml
<CustomField>
    <fullName>ArbeitgeberSeit__c</fullName>
    <label>Arbeitgeber seit</label>
    <type>Date</type>
</CustomField>