force-app/main/default/objects/Contact/fields/Art_des_Termins__c.field-meta.xml
<CustomField>
    <fullName>Art_des_Termins__c</fullName>
    <label>Art des Termins</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Persönlich</fullName>
            </value>
            <value>
                <fullName>Telefonisch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>