force-app/main/default/objects/Contact/fields/Aus_Lead_konvertiert__c.field-meta.xml
<CustomField>
    <fullName>Aus_Lead_konvertiert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aus Lead konvertiert</label>
    <type>Checkbox</type>
</CustomField>