force-app/main/default/objects/Contact/fields/Aus_Maklerportal__c.field-meta.xml
<CustomField>
    <fullName>Aus_Maklerportal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked, wenn der Kontakt aus dem Maklerportal über das Interessenten- / Maklerschutz Formular importiert wurde.</description>
    <inlineHelpText>Ist Kontakt aus Maklerportal( Interessenten- / Maklerschutz Formular )</inlineHelpText>
    <label>Aus Maklerportal</label>
    <type>Checkbox</type>
</CustomField>