force-app/main/default/objects/Contact/fields/Bemerkung__c.field-meta.xml
<CustomField>
    <fullName>Bemerkung__c</fullName>
    <inlineHelpText>Für S. Bauerochse</inlineHelpText>
    <label>Bemerkung</label>
    <type>TextArea</type>
</CustomField>