force-app/main/default/objects/Contact/fields/BenutzerSimulieren__c.field-meta.xml
<CustomField>
    <fullName>BenutzerSimulieren__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benutzer simulieren</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Benutzer simulieren)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>