force-app/main/default/objects/Contact/fields/Berater__c.field-meta.xml
<CustomField>
    <fullName>Berater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Berater</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Kontakte (Berater)</relationshipLabel>
    <relationshipName>Berater</relationshipName>
    <type>Lookup</type>
</CustomField>