force-app/main/default/objects/Contact/fields/Beratungstermin__c.field-meta.xml
<CustomField>
    <fullName>Beratungstermin__c</fullName>
    <label>Beratungstermin</label>
    <type>DateTime</type>
</CustomField>