force-app/main/default/objects/Contact/fields/Beruf__c.field-meta.xml
<CustomField>
    <fullName>Beruf__c</fullName>
    <label>Beruf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>