force-app/main/default/objects/Contact/fields/BerufIstBefristet__c.field-meta.xml
<CustomField>
    <fullName>BerufIstBefristet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beruf ist befristet</label>
    <type>Checkbox</type>
</CustomField>