force-app/main/default/objects/Contact/fields/BerufIstBefristetBis__c.field-meta.xml
<CustomField>
    <fullName>BerufIstBefristetBis__c</fullName>
    <label>Beruf ist befristet bis</label>
    <type>Date</type>
</CustomField>