force-app/main/default/objects/Contact/fields/Berufsart__c.field-meta.xml
<CustomField>
    <fullName>Berufsart__c</fullName>
    <label>Berufsart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selbstständig</fullName>
            </value>
            <value>
                <fullName>Angestellt</fullName>
            </value>
            <value>
                <fullName>Beamter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>