force-app/main/default/objects/Contact/fields/BIC__c.field-meta.xml
<CustomField>
    <fullName>BIC__c</fullName>
    <label>BIC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>