force-app/main/default/objects/Contact/fields/CalendlyUrl__c.field-meta.xml
<CustomField>
    <fullName>CalendlyUrl__c</fullName>
    <label>Calendly Link</label>
    <type>Url</type>
</CustomField>