force-app/main/default/objects/Contact/fields/CarestoneVertriebsvereinbarung__c.field-meta.xml
<CustomField>
    <fullName>CarestoneVertriebsvereinbarung__c</fullName>
    <formula>Account.Carestone_Vertriebsvereinbarung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carestone Vertriebsvereinbarung?</label>
    <type>Checkbox</type>
</CustomField>