force-app/main/default/objects/Contact/fields/ChurchTax__c.field-meta.xml
<CustomField>
    <fullName>ChurchTax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kirchensteuer</label>
    <type>Checkbox</type>
</CustomField>