force-app/main/default/objects/Contact/fields/CommunityUser__c.field-meta.xml
<CustomField>
    <fullName>CommunityUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>