force-app/main/default/objects/Contact/fields/CreatedInPartnerPortal__c.field-meta.xml
<CustomField>
    <fullName>CreatedInPartnerPortal__c</fullName>
    <formula>!IsBlank(CreatedBy.ContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Erstellt im Vertriebsportal</label>
    <type>Checkbox</type>
</CustomField>