force-app/main/default/objects/Contact/fields/Daten_aktualisieren__c.field-meta.xml
<CustomField>
    <fullName>Daten_aktualisieren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daten aktualisieren</label>
    <type>Checkbox</type>
</CustomField>