force-app/main/default/objects/Contact/fields/DatenschutzStatus__c.field-meta.xml
<CustomField>
    <fullName>DatenschutzStatus__c</fullName>
    <label>Datenschutz Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Docusign Versendet</fullName>
            </value>
            <value>
                <fullName>Docusign unterschrieben</fullName>
            </value>
            <value>
                <fullName>Liegt bei Vertriebspartner vor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>