force-app/main/default/objects/Contact/fields/DatevDebitorenKundennummerKaeufer__c.field-meta.xml
<CustomField>
    <fullName>DatevDebitorenKundennummerKaeufer__c</fullName>
    <label>Datev Debitoren- / Kundennummer Käufer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>