force-app/main/default/objects/Contact/fields/Datum_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Datum_Meeting__c</fullName>
    <label>Datum Meeting</label>
    <type>Date</type>
</CustomField>