force-app/main/default/objects/Contact/fields/DatumDatenschutzStatus__c.field-meta.xml
<CustomField>
    <fullName>DatumDatenschutzStatus__c</fullName>
    <label>Datum Datenschutz Status</label>
    <type>Date</type>
</CustomField>