force-app/main/default/objects/Contact/fields/Dauerhaft_gesch_tzt__c.field-meta.xml
<CustomField>
    <fullName>Dauerhaft_gesch_tzt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dieser Kontakt hat bereits ein Apartment gekauft und ist somit dauerhaft geschützt.</inlineHelpText>
    <label>Dauerhaft geschützt</label>
    <type>Checkbox</type>
</CustomField>