force-app/main/default/objects/Contact/fields/E_Mail_Portalnutzer__c.field-meta.xml
<CustomField>
    <fullName>E_Mail_Portalnutzer__c</fullName>
    <label>E-Mail Portalnutzer</label>
    <type>Email</type>
</CustomField>