force-app/main/default/objects/Contact/fields/Ehepartner__c.field-meta.xml
<CustomField>
    <fullName>Ehepartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ehepartner</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Kontakte</relationshipLabel>
    <relationshipName>Kontakte</relationshipName>
    <type>Lookup</type>
</CustomField>