force-app/main/default/objects/Contact/fields/EigenkapitalText__c.field-meta.xml
<CustomField>
    <fullName>EigenkapitalText__c</fullName>
    <label>Eigenkapital (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>