force-app/main/default/objects/Contact/fields/EinladungZumVPSenden__c.field-meta.xml
<CustomField>
    <fullName>EinladungZumVPSenden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Einladung zum VP senden</label>
    <type>Checkbox</type>
</CustomField>