force-app/main/default/objects/Contact/fields/EmailForCreditNotes__c.field-meta.xml
<CustomField>
    <fullName>EmailForCreditNotes__c</fullName>
    <inlineHelpText>Wenn dieses Feld befüllt ist, werden Gutschriften statt an die normale Email-Adresse an die hier hinterlegte Adresse gesendet.</inlineHelpText>
    <label>Email für Gutschriften</label>
    <type>Email</type>
</CustomField>