force-app/main/default/objects/Contact/fields/Equity__c.field-meta.xml
<CustomField>
    <fullName>Equity__c</fullName>
    <label>Eigenkapital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>