force-app/main/default/objects/Contact/fields/ErfolgsabhaengigeMaxInProzent__c.field-meta.xml
<CustomField>
    <fullName>ErfolgsabhaengigeMaxInProzent__c</fullName>
    <label>Erfolgsabhängige max. in Prozent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>