force-app/main/default/objects/Contact/fields/ErfolgsabhaengigeProvisionInEuro__c.field-meta.xml
<CustomField>
    <fullName>ErfolgsabhaengigeProvisionInEuro__c</fullName>
    <label>Erfolgsabhängige Provision in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>