force-app/main/default/objects/Contact/fields/ErhaeltErfolgsabhaengigeProvision__c.field-meta.xml
<CustomField>
    <fullName>ErhaeltErfolgsabhaengigeProvision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erhält erfolgsabhängige Provision</label>
    <type>Checkbox</type>
</CustomField>