force-app/main/default/objects/Contact/fields/ErhaeltErfolgsabhaengigeProvisionBis__c.field-meta.xml
<CustomField>
    <fullName>ErhaeltErfolgsabhaengigeProvisionBis__c</fullName>
    <label>Erhält erfolgsabhängige Provision bis</label>
    <type>Date</type>
</CustomField>