force-app/main/default/objects/Contact/fields/ErhaeltErfolgsabhaengigeProvisionVon__c.field-meta.xml
<CustomField>
    <fullName>ErhaeltErfolgsabhaengigeProvisionVon__c</fullName>
    <label>Erhält erfolgsabhängige Provision von</label>
    <type>Date</type>
</CustomField>