force-app/main/default/objects/Contact/fields/FirebaseUserId__c.field-meta.xml
<CustomField>
    <fullName>FirebaseUserId__c</fullName>
    <externalId>true</externalId>
    <label>Kundenapp Benutzer Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>