force-app/main/default/objects/Contact/fields/Funktion__c.field-meta.xml
<CustomField>
    <fullName>Funktion__c</fullName>
    <label>Funktion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>