force-app/main/default/objects/Contact/fields/G_terstand__c.field-meta.xml
<CustomField>
    <fullName>G_terstand__c</fullName>
    <label>Güterstand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>gesetzlich</fullName>
            </value>
            <value>
                <fullName>getrennt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>