force-app/main/default/objects/Contact/fields/Geburtsname__c.field-meta.xml
<CustomField>
    <fullName>Geburtsname__c</fullName>
    <label>Geburtsname</label>
    <length>30</length>
    <type>Text</type>
</CustomField>