force-app/main/default/objects/Contact/fields/Gesch_ftsbereich__c.field-meta.xml
<CustomField>
    <fullName>Gesch_ftsbereich__c</fullName>
    <label>Geschäftsbereich</label>
    <length>35</length>
    <type>Text</type>
</CustomField>