force-app/main/default/objects/Contact/fields/Gesch_ftsbeziehung__c.field-meta.xml
<CustomField>
    <fullName>Gesch_ftsbeziehung__c</fullName>
    <label>Geschäftsbeziehung</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kunde</fullName>
            </value>
            <value>
                <fullName>Interessent</fullName>
            </value>
            <value>
                <fullName>Mitarbeiter WH</fullName>
            </value>
            <value>
                <fullName>Maklerbetreuer</fullName>
            </value>
            <value>
                <fullName>Versicherungsmakler</fullName>
            </value>
            <value>
                <fullName>Immobilienmakler</fullName>
            </value>
            <value>
                <fullName>Regional Direktor</fullName>
            </value>
            <value>
                <fullName>Notar</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Dienstleister</fullName>
            </value>
            <value>
                <fullName>Mitarbeiter</fullName>
            </value>
            <value>
                <fullName>Anbahnung</fullName>
            </value>
            <value>
                <fullName>Immobilien- oder Versicherungsmakler</fullName>
            </value>
            <value>
                <fullName>Finanz- und Versicherungsmakler</fullName>
            </value>
            <value>
                <fullName>Finanzmakler</fullName>
            </value>
            <value>
                <fullName>Gekündigt vom WirtschaftsHaus</fullName>
            </value>
            <value>
                <fullName>Gekündigt von Extern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>