force-app/main/default/objects/Contact/fields/Gesch_ftstyp__c.field-meta.xml
<CustomField>
    <fullName>Gesch_ftstyp__c</fullName>
    <formula>IF(INCLUDES(Gesch_ftsbeziehung__c, &apos;Kunde&apos;), &apos;Kunde&apos;, IF(INCLUDES(Gesch_ftsbeziehung__c, &apos;Interessent&apos;), &apos;Interessent&apos;, &apos;Makler&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geschäftstyp</label>
    <type>Text</type>
</CustomField>