force-app/main/default/objects/Contact/fields/Gewerbeanmeldungen__c.field-meta.xml
<CustomField>
    <fullName>Gewerbeanmeldungen__c</fullName>
    <label>Gewerbeanmeldungen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>34C</fullName>
            </value>
            <value>
                <fullName>34D</fullName>
            </value>
            <value>
                <fullName>34F</fullName>
            </value>
            <value>
                <fullName>34H</fullName>
            </value>
            <value>
                <fullName>34I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>