force-app/main/default/objects/Contact/fields/Grund_Schutz_Verl_ngerung__c.field-meta.xml
<CustomField>
    <fullName>Grund_Schutz_Verl_ngerung__c</fullName>
    <label>Grund Schutz Verlängerung</label>
    <type>TextArea</type>
</CustomField>