force-app/main/default/objects/Contact/fields/GrundFuersInvestment__c.field-meta.xml
<CustomField>
    <fullName>GrundFuersInvestment__c</fullName>
    <label>Grund fürs Investment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>