force-app/main/default/objects/Contact/fields/Gueterstand__c.field-meta.xml
<CustomField>
    <fullName>Gueterstand__c</fullName>
    <label>Güterstand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zugewinn</fullName>
            </value>
            <value>
                <fullName>Gütertrennung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>