force-app/main/default/objects/Contact/fields/HatEinenBeratungsportalZugang__c.field-meta.xml
<CustomField>
    <fullName>HatEinenBeratungsportalZugang__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hat einen Beratungsportal Zugang?</label>
    <type>Checkbox</type>
</CustomField>