force-app/main/default/objects/Contact/fields/HatVPZugang__c.field-meta.xml
<CustomField>
    <fullName>HatVPZugang__c</fullName>
    <formula>!IsBlank(VPBenutzerId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hat VP Zugang</label>
    <type>Checkbox</type>
</CustomField>