force-app/main/default/objects/Contact/fields/HGBNr__c.field-meta.xml
<CustomField>
    <fullName>HGBNr__c</fullName>
    <label>HGBNr</label>
    <length>18</length>
    <type>Text</type>
</CustomField>