force-app/main/default/objects/Contact/fields/ImVertriebsportalAnzeigen__c.field-meta.xml
<CustomField>
    <fullName>ImVertriebsportalAnzeigen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Im Vertriebsportal anzeigen</label>
    <type>Checkbox</type>
</CustomField>