force-app/main/default/objects/Contact/fields/In_Genehmigungsprozess__c.field-meta.xml
<CustomField>
    <fullName>In_Genehmigungsprozess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Genehmigungsprozess</label>
    <type>Checkbox</type>
</CustomField>