force-app/main/default/objects/Contact/fields/Ist_Maklerbetreuer_WH__c.field-meta.xml
<CustomField>
    <fullName>Ist_Maklerbetreuer_WH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ist Maklerbetreuer CS</label>
    <type>Checkbox</type>
</CustomField>