force-app/main/default/objects/Contact/fields/Jahresbruttoeinkommen__c.field-meta.xml
<CustomField>
    <fullName>Jahresbruttoeinkommen__c</fullName>
    <label>Jahresbruttoeinkommen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>