force-app/main/default/objects/Contact/fields/Kampagnen__c.field-meta.xml
<CustomField>
    <fullName>Kampagnen__c</fullName>
    <label>Kampagnen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incentive 2024</fullName>
            </value>
            <value>
                <fullName>Incentive 2025</fullName>
            </value>
            <value>
                <fullName>Incentive 2026</fullName>
            </value>
            <value>
                <fullName>Incentive 2027</fullName>
            </value>
            <value>
                <fullName>Incentive 2028</fullName>
            </value>
            <value>
                <fullName>Incentive 2029</fullName>
            </value>
            <value>
                <fullName>Incentive 2030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>