force-app/main/default/objects/Contact/fields/Kampagnenquelle__c.field-meta.xml
<CustomField>
    <fullName>Kampagnenquelle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kampagnenquelle</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Kontakte</relationshipLabel>
    <relationshipName>Interessenten</relationshipName>
    <type>Lookup</type>
</CustomField>