force-app/main/default/objects/Contact/fields/Keine_Vorabprovision__c.field-meta.xml
<CustomField>
    <fullName>Keine_Vorabprovision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ist Wahr, wenn der Kontakt eine negative Crefo hat</description>
    <inlineHelpText>Hat der Kontakt eine negative Crefo?</inlineHelpText>
    <label>Keine Vorabprovision</label>
    <type>Checkbox</type>
</CustomField>