force-app/main/default/objects/Contact/fields/Keine_Werbung_postalisch__c.field-meta.xml
<CustomField>
    <fullName>Keine_Werbung_postalisch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Anhaken wenn der Kontakt postalisch keine Werbung erhalten soll</inlineHelpText>
    <label>Keine Werbung postalisch</label>
    <type>Checkbox</type>
</CustomField>