force-app/main/default/objects/Contact/fields/Keinen_Kontakt_postalisch__c.field-meta.xml
<CustomField>
    <fullName>Keinen_Kontakt_postalisch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Anhaken wenn der Kontakt postalisch überhaupt nicht kontaktiert werden soll</inlineHelpText>
    <label>Keinen Kontakt postalisch</label>
    <type>Checkbox</type>
</CustomField>