force-app/main/default/objects/Contact/fields/Kind1NameUndGeburtsdatum__c.field-meta.xml
<CustomField>
    <fullName>Kind1NameUndGeburtsdatum__c</fullName>
    <label>Kind 1 (Name und Geburtsdatum)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>