force-app/main/default/objects/Contact/fields/Kind2NameUndGeburtsdatum__c.field-meta.xml
<CustomField>
    <fullName>Kind2NameUndGeburtsdatum__c</fullName>
    <label>Kind 2 (Name und Geburtsdatum)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>