force-app/main/default/objects/Contact/fields/Kind3NameUndGeburtsdatum__c.field-meta.xml
<CustomField>
    <fullName>Kind3NameUndGeburtsdatum__c</fullName>
    <label>Kind 3 (Name und Geburtsdatum)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>