force-app/main/default/objects/Contact/fields/KontoinhaberFallsAbweichend__c.field-meta.xml
<CustomField>
    <fullName>KontoinhaberFallsAbweichend__c</fullName>
    <label>Kontoinhaber (falls abweichend)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>