force-app/main/default/objects/Contact/fields/Kontonummer__c.field-meta.xml
<CustomField>
    <fullName>Kontonummer__c</fullName>
    <label>Kontonummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>