force-app/main/default/objects/Contact/fields/Kunden_Maklerschutz__c.field-meta.xml
<CustomField>
    <fullName>Kunden_Maklerschutz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kundenschutz besteht</label>
    <type>Checkbox</type>
</CustomField>