force-app/main/default/objects/Contact/fields/KundenappEinladungSenden__c.field-meta.xml
<CustomField>
    <fullName>KundenappEinladungSenden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kundenapp Einladung senden</label>
    <type>Checkbox</type>
</CustomField>