force-app/main/default/objects/Contact/fields/Kundenschutz__c.field-meta.xml
<CustomField>
    <fullName>Kundenschutz__c</fullName>
    <label>Kundenschutz bis</label>
    <type>DateTime</type>
</CustomField>