force-app/main/default/objects/Contact/fields/LatitudeRounded__c.field-meta.xml
<CustomField>
    <fullName>LatitudeRounded__c</fullName>
    <formula>Round(MailingLatitude, 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latitude rounded</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>