force-app/main/default/objects/Contact/fields/LatLng__c.field-meta.xml
<CustomField>
    <fullName>LatLng__c</fullName>
    <formula>TEXT(MailingLatitude) + &apos;, &apos; + TEXT(MailingLongitude)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LatLng</label>
    <type>Text</type>
</CustomField>