force-app/main/default/objects/Contact/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Darlehen beim WH - Mit späterem Erwerb</fullName>
            </value>
            <value>
                <fullName>Erstinformation raus</fullName>
            </value>
            <value>
                <fullName>Halten</fullName>
            </value>
            <value>
                <fullName>Hat an Veranstaltung teilgenommen</fullName>
            </value>
            <value>
                <fullName>Hat nicht an Veranstaltung teilgenommen</fullName>
            </value>
            <value>
                <fullName>Keine Telefonnummer – Erst Info raus</fullName>
            </value>
            <value>
                <fullName>Lead hat gekauft</fullName>
            </value>
            <value>
                <fullName>Lead interessiert sich für ein bestimmtes Gebiet</fullName>
            </value>
            <value>
                <fullName>Lead verloren</fullName>
            </value>
            <value>
                <fullName>Meldet sich bei Interesse-Abgelegt</fullName>
            </value>
            <value>
                <fullName>Möchte an Veranstaltung teilnehmen</fullName>
            </value>
            <value>
                <fullName>Neu – in Bearbeitung</fullName>
            </value>
            <value>
                <fullName>Persönlichen Termin durchgeführt</fullName>
            </value>
            <value>
                <fullName>Persönlichen Termin vereinbart</fullName>
            </value>
            <value>
                <fullName>Reklamation</fullName>
            </value>
            <value>
                <fullName>Telefonisch nie erreicht – Abgelegt</fullName>
            </value>
            <value>
                <fullName>Telefontermin durchgeführt</fullName>
            </value>
            <value>
                <fullName>Telefontermin vereinbart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>