force-app/main/default/objects/Contact/fields/Letzte_Status_nderung__c.field-meta.xml
<CustomField>
    <fullName>Letzte_Status_nderung__c</fullName>
    <inlineHelpText>Gibt an, wann der Lead Status das letzte mal angepasst wurde</inlineHelpText>
    <label>Letzte Statusänderung</label>
    <type>DateTime</type>
</CustomField>