force-app/main/default/objects/Contact/fields/LetzteImmobiliennummer__c.field-meta.xml
<CustomField>
    <fullName>LetzteImmobiliennummer__c</fullName>
    <label>Letzte Immobiliennummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>