force-app/main/default/objects/Contact/fields/Loeschvermerk__c.field-meta.xml
<CustomField>
    <fullName>Loeschvermerk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Löschung durch Automation nach definiertem Zeitraum für DSGVO Compliance oder bei direkter Anforderung der Person selbst.</description>
    <label>Löschvermerk</label>
    <type>Checkbox</type>
</CustomField>