force-app/main/default/objects/Contact/fields/LongitudeRounded__c.field-meta.xml
<CustomField>
    <fullName>LongitudeRounded__c</fullName>
    <formula>ROUND(MailingLongitude, 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude Rounded</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>