force-app/main/default/objects/Contact/fields/Makler_Best_tigungsmail__c.field-meta.xml
<CustomField>
    <fullName>Makler_Best_tigungsmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Makler Bestätigungsmail</label>
    <type>Checkbox</type>
</CustomField>